# lexar_test

./: CMakeLists.txt  Problem.html
LexTest/: CMakeLists.txt
LexTest/src/: main.cpp
libLexTest/: CMakeLists.txt
libLexTest/include/: lexar.h  lexer.h  token.h
libLexTest/src/: lexar.cpp  lexer.cpp  token.cpp
testsLexTest/: CMakeLists.txt
testsLexTest/data/: case1.txt  case2.txt  case3.txt
testsLexTest/src/: lexar_tests.cpp  lexer_tests.cpp  token_tests.cpp
